# wikibot

./: LICENSE  README.md  config.toml  constants.py  corpus.txt  enums.py  helper.py  lemmatizer.py  main.py  ngram.py  pos_tagger.py  pyproject.toml  query_analyzer.py  scraper.py  structures.py  text_gen.py  tokenizer.py  utils.py
src/: data.py  main.py  ngram.py  pos_tagger.py  query_analyzer.py  question_parser.py  scraper.py  text_gen.py  tokenizer.py  utils.py
wikibot/src/: ngram.py  pos_tagger.py  query_analyzer.py
